[tool.poetry]
name = "ZnSlice"
version = "0.1.2"
description = "Cache, advanced slicing and lazy loading for __getitem__"
license = "Apache-2.0"
authors = ["zincwarecode <zincwarecode@gmail.com>"]
readme = "README.md"

[tool.poetry.urls]
repository = "https://github.com/zincware/ZnSlice"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
ruff = "^0.0.224"
pytest = "^7.2.1"
ipykernel = "^6.20.2"
ase = "^3.22.1"
tqdm = "^4.64.1"
coverage = "^7.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
branch = true
# omit the tests themselves
omit = ["*/tests/*", "*/tmp/*", "*/interface/*"]

[tool.coverage.report]
exclude_lines = [
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
ignore_errors = true

[tool.ruff]
select = ["E", "F", "D", "N", "C"]
extend-ignore = [
    "C901",
    "D213", "D203",
    "D401",
    "N802", "N801"
]

exclude = [
    "tests",
]